feat: added auth middleware
